fix: compile sql for followup and action buttons wrap fix

--- a/webview_panels/src/modules/dataPilot/datapilot.module.scss
+++ b/webview_panels/src/modules/dataPilot/datapilot.module.scss
@@ -46,9 +46,9 @@ body {
   }
 
   .action-button{
-    white-space: nowrap;
     font-family: "SF Mono",Monaco,Menlo,Courier,monospace;
     font-size: 10px;
+    text-align: left;
 
     &.default{
       font-size: 12px;
