--- a/webview_panels/src/uiCore/components/codeblock/codeblock.module.scss
+++ b/webview_panels/src/uiCore/components/codeblock/codeblock.module.scss
@@ -11,6 +11,7 @@
       background: transparent !important;
 
       code {
+        background: transparent !important;
         span{
          background: transparent !important;
       }
